scripts/deploy/manifests/07-rustfs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rustfs
  namespace: envsync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rustfs
  template:
    metadata:
      labels:
        app: rustfs
    spec:
      containers:
        - name: rustfs
          image: rustfs/rustfs:latest
          ports:
            - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: rustfs
  namespace: envsync
spec:
  selector:
    app: rustfs
  ports:
    - port: 9000
      targetPort: 9000
