scripts/deploy/manifests/08-minikms.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minikms
  namespace: envsync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minikms
  template:
    metadata:
      labels:
        app: minikms
    spec:
      containers:
        - name: minikms
          image: ghcr.io/envsync-cloud/minikms:sha-735dfe8
          ports:
            - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: minikms
  namespace: envsync
spec:
  selector:
    app: minikms
  ports:
    - port: 50051
      targetPort: 50051
