scripts/deploy/manifests/10-zitadel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zitadel
  namespace: envsync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zitadel
  template:
    metadata:
      labels:
        app: zitadel
    spec:
      containers:
        - name: zitadel
          image: ghcr.io/zitadel/zitadel:latest
          args:
            - start-from-init
            - --masterkey
            - MasterkeyNeedsToHave32Characters
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: zitadel
  namespace: envsync
spec:
  selector:
    app: zitadel
  ports:
    - port: 8080
      targetPort: 8080
